--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,9 @@
 FROM node:8.6.0-alpine
 
-# Set a working directory
-WORKDIR /usr/src/app
-
-# Copy application files
-COPY . .
-
-# Install dependencies
-RUN apk add --no-cache libsodium && \
-  yarn install --production --no-progress && \
-  yarn cache clean
-
-# Run the container under "node" user by default
-USER node
-
-CMD [ "node", "build/server.js" ]
+RUN mkdir -p /usr/server
+WORKDIR /usr/server
+ADD package.json /usr/server
+RUN npm install
+COPY . /usr/server
+EXPOSE 1337
+CMD [ "node", "app" ]
