--- a/mobile/Dockerfile
+++ b/mobile/Dockerfile
@@ -5,4 +5,7 @@ WORKDIR /usr/src/app
 ADD package.json /usr/src/app
 RUN npm install
 COPY . /usr/src/app
-CMD [ "node", "app" ]
+
+RUN apk add --no-cache bash
+
+CMD [ "npm", "start" ]
