--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,8 @@
     "eslint-plugin-react": "^7.4.0",
     "jest-expo": "^21.0.2",
     "react-native-scripts": "1.5.0",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "tcomb-form-native": "^0.6.10"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
