--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-navigation": "^1.0.0-beta.13",
-    "react-redux": "^5.0.6"
+    "react-redux": "^5.0.6",
+    "tcomb-form-native": "^0.6.10"
   }
 }
