--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,14 @@
   "keywords": [],
   "dependencies": {
     "async": "2.0.1",
+    "bcrypt": "^1.0.3",
     "grunt": "1.0.1",
     "lodash": "3.10.1",
+    "moment": "^2.19.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "rand-token": "^0.3.0",
     "sails": "^1.0.0-37",
     "sails-hook-grunt": "^2.0.0",
     "sails-hook-orm": "^2.0.0-16",
