--- a/server/package.json
+++ b/server/package.json
@@ -21,14 +21,15 @@
     "sails-postgresql": "^1.0.0-11"
   },
   "devDependencies": {
-    "eslint": "3.5.0"
+    "eslint": "3.5.0",
+    "mocha": "^4.0.1",
+    "supertest": "^3.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "test": "npm run lint && npm run custom-tests && echo 'Done.'",
+    "test": "npm run lint && npm run custom-tests && node ./node_modules/mocha/bin/mocha test/lifecycle.test.js test/integration/**/*.test.js && echo 'Done.'",
     "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 && echo '✔  Your code looks good.'",
-    "custom-tests": "echo \"(No other custom tests yet.)\" && echo",
-    "debug": "node debug app.js"
+    "debug": "node debug app.js",
   },
   "main": "app.js",
   "repository": {
