--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,6 +31,6 @@
     "react-native": "^0.48.4",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-gifted-chat": "^0.2.9",
-    "react-native-nav": "^2.0.2",
+    "react-native-nav": "^2.0.2"
   }
 }
