--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,8 +29,10 @@
     "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
+    "react-native-button-component": "^0.1.25",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-gifted-chat": "^0.2.9",
-    "react-native-nav": "^2.0.2"
+    "react-native-nav": "^2.0.2",
+    "react-native-progress": "^3.4.0"
   }
 }
