--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,13 +30,18 @@
     ]
   },
   "dependencies": {
+    "apisauce": "^0.14.1",
     "expo": "^21.0.0",
     "native-base": "^2.3.3",
+    "ramda": "^0.25.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
+    "redux-persist": "^4.10.1",
+    "reduxsauce": "^0.7.0",
+    "seamless-immutable": "^7.1.2",
     "tcomb-form-native": "^0.6.10"
   }
 }
