--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,7 @@
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && node ./node_modules/mocha/bin/mocha test/lifecycle.test.js test/integration/**/*.test.js && echo 'Done.'",
     "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 && echo '✔  Your code looks good.'",
-    "debug": "node debug app.js",
+    "debug": "node debug app.js"
   },
   "main": "app.js",
   "repository": {
