--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,9 @@ deploy_staging:
   stage: deploy
   script:
     - echo "Deploy to staging server"
-    - ssh-copy-id -i $SERVER_SSH_KEY $SERVER_ADMIN@$SERVER_URL
+    - ssh-keygen -t rsa -b 4096 -C '' -f ~/.ssh/deploy_rsa
+    - ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts
+    - cat ~/.ssh/deploy_rsa.pub | ssh $SERVER_ADMIN@$SERVER_IP "cat >>  ~/.ssh/authorized_keys"
     - rsync -avuz $CI_PROJECT_DIR/server/ $SERVER_ADMIN@$SERVER_URL:/var/wwww/api.weshareashare
   environment:
     name: staging
