--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,8 +31,11 @@
   },
   "dependencies": {
     "apisauce": "^0.14.1",
+    "buffer": "^5.0.8",
     "expo": "^21.0.0",
+    "fetchival": "^0.3.2",
     "native-base": "^2.3.3",
+    "node-fetch": "^1.7.3",
     "ramda": "^0.25.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
@@ -40,6 +43,7 @@
     "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
     "redux-persist": "^4.10.1",
+    "redux-thunk": "^2.2.0",
     "reduxsauce": "^0.7.0",
     "seamless-immutable": "^7.1.2",
     "tcomb-form-native": "^0.6.10"
