--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,39 @@ cache:
   - ./desktop/node_modules/
 
 stages:
+  - test_server
+  - test_mobile
+  - test_desktop
+  - build
   - deploy
+
+test_server:
+  stage: test_server
+  script: 
+    - echo "**Running Server tests**"
+    - npm --prefix ./server install
+    - npm --prefix ./server test
+    - echo "**Terminating Server tests**"
+  
+test_mobile:
+  stage: test_mobile
+  script: 
+    - echo "**Running Mobile tests**"
+    - npm --prefix ./mobile install
+    - echo "**Terminating Mobile tests**"
+  
+test_desktop:
+  stage: test_desktop
+  script: 
+    - echo "**Running Desktop tests**"
+    - npm --prefix ./desktop install
+    - npm --prefix ./desktop test
+    - echo "**Terminating Desktop tests**"
+
+build:
+  stage: build
+  script: 
+    - echo "Building the app"
 
 deploy:
   stage: deploy
