Server with promises instead of callback hell :) Fix to bcrypt error inside docker Create user working

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,14 @@ FROM node:8.6.0-alpine
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 ADD package.json /usr/src/app
-RUN npm install
+
+RUN apk --no-cache add --virtual native-deps \
+  git g++ gcc libgcc libstdc++ linux-headers make python && \
+  npm install node-gyp -g &&\
+  npm install &&\
+  npm rebuild bcrypt --build-from-source && \
+  npm cache clean --force &&\
+  apk del native-deps
+
 COPY . /usr/src/app
 CMD [ "node", "app" ]
