API models & controllers

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,10 +7,11 @@ ADD package.json /usr/src/app
 RUN apk --no-cache add --virtual native-deps \
   git g++ gcc libgcc libstdc++ linux-headers make python && \
   npm install node-gyp -g &&\
+  npm install -g forever &&\
   npm install &&\
   npm rebuild bcrypt --build-from-source && \
   npm cache clean --force &&\
   apk del native-deps
 
 COPY . /usr/src/app
-CMD [ "node", "app" ]
+CMD [ "forever", "-w", "start", "app" ]
