--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,15 @@
   "dependencies": {
     "async": "2.0.1",
     "bcrypt": "1.0.3",
+    "email-templates": "^3.1.5",
     "grunt": "1.0.1",
     "lodash": "3.10.1",
     "moment": "^2.19.1",
+    "nodemailer": "^4.3.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
+    "pug": "^2.0.0-rc.4",
     "rand-token": "^0.3.0",
     "sails": "^1.0.0-37",
     "sails-hook-orm": "^2.0.0-16",
