--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "async": "2.0.1",
     "bcrypt": "1.0.3",
     "email-templates": "^3.1.5",
+    "express-validator": "^4.3.0",
     "grunt": "1.0.1",
     "lodash": "3.10.1",
     "moment": "^2.19.1",
