--- a/mobile/package.json
+++ b/mobile/package.json
@@ -46,6 +46,7 @@
     "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
     "redux-persist": "^4.10.1",
+    "redux-thunk": "^2.2.0",
     "reduxsauce": "^0.7.0",
     "seamless-immutable": "^7.1.2",
     "tcomb-form-native": "^0.6.10"
