--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "async": "2.0.1",
     "bcrypt": "1.0.3",
-    "email-templates": "^3.1.5",
+    "email-templates": "^3.1.6",
     "express-validator": "^4.3.0",
     "grunt": "1.0.1",
     "lodash": "3.10.1",
@@ -20,6 +20,7 @@
     "rand-token": "^0.3.0",
     "sails": "^1.0.0-37",
     "sails-hook-orm": "^2.0.0-16",
+    "sails-hook-sockets": "^0.13.13",
     "sails-postgresql": "^1.0.0-11"
   },
   "devDependencies": {
