--- a/mobile/package.json
+++ b/mobile/package.json
@@ -42,8 +42,9 @@
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-elements": "^0.17.0",
     "react-native-gifted-chat": "^0.2.9",
+    "react-native-keyboard-aware-scroll-view": "^0.4.1",
     "react-native-nav": "^2.0.2",
-    "react-navigation": "^1.0.0-beta.13",
+    "react-navigation": "^1.0.0-beta.19",
     "react-redux": "^5.0.6",
     "redux-persist": "^4.10.1",
     "redux-thunk": "^2.2.0",
