--- a/mobile/package.json
+++ b/mobile/package.json
@@ -44,6 +44,7 @@
     "react-native-gifted-chat": "^0.2.9",
     "react-native-keyboard-aware-scroll-view": "^0.4.1",
     "react-native-nav": "^2.0.2",
+    "react-native-progress": "^3.4.0",
     "react-navigation": "^1.0.0-beta.19",
     "react-redux": "^5.0.6",
     "redux-persist": "^4.10.1",
