--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 image: node:8.8.1-alpine
 
-cache:
-  paths:
-  - ./server/node_modules/
-  - ./mobile/node_modules/
-  - ./desktop/node_modules/
+#cache:
+#  paths:
+#  - ./server/node_modules/
+#  - ./mobile/node_modules/
+#  - ./desktop/node_modules/
 
 stages:
   - test_server
@@ -49,6 +49,7 @@ deploy:
   script:
     - echo "Deploy to staging server"
     - cd server/
+    - npm install -g npm@5.5.1
     - npm install -g nodemon
     - npm install
     - export NODE_ENV=production
