--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ deploy:
   script:
     - echo "Deploy to staging server"
     - cd server/
-    - npm install -g npm@5.5.1
+    - apk add --update nodejs nodejs-npm && npm install npm@latest -g
     - npm install -g nodemon
     - npm install
     - export NODE_ENV=production
