--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,9 @@ deploy:
   script:
     - echo "Deploy to staging server"
     - cd server/
-    - apk add --update nodejs nodejs-npm && npm install npm@latest -g
+    - npm install npm@latest
+    - rm -rf /usr/local/lib/node_modules
+    - mv node_modules /usr/local/lib/
     - npm install -g nodemon
     - npm install
     - export NODE_ENV=production
