--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ deploy:
   script:
     - echo "Deploy to staging server"
     - cd server/
-    - npm install npm@latest
+    - npm install npm@5.0.0
     - rm -rf /usr/local/lib/node_modules
     - mv node_modules /usr/local/lib/
     - npm install -g nodemon
