--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 image: node:8.8.1-alpine
 
 before_script:
-  - 'which ssh-agent || ( apk update && apk add openssh-client)'
+  - 'which ssh-agent || (apk update && apk add openssh-client)'
   - eval $(ssh-agent -s)
-  - ssh-add <(echo "$SSH_PRIVATE_KEY")
+  - ssh-add < echo "$SSH_PRIVATE_KEY"
   - mkdir -p ~/.ssh
   - '[[ -f /.dockerenv ]] && echo "$SSH_SERVER_HOSTKEYS" > ~/.ssh/known_hosts'
 
