--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: node:8.8.1-alpine
 
 before_script:
-  - 'which ssh-agent || (apk update && apk add openssh-client)'
+  - 'which ssh-agent || (apk update && apk add openssh-client bash grep)'
   - eval $(ssh-agent -s)
   - ssh-add < echo "$SSH_PRIVATE_KEY"
   - mkdir -p ~/.ssh
