--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: node:8.8.1-alpine
 before_script:
   - 'which ssh-agent || (apk update && apk add openssh-client bash grep)'
   - eval $(ssh-agent -s)
-  - ssh-add < echo "$SSH_PRIVATE_KEY"
+  - echo "$SSH_PRIVATE_KEY" > ssh-add
   - mkdir -p ~/.ssh
   - '[[ -f /.dockerenv ]] && echo "$SSH_SERVER_HOSTKEYS" > ~/.ssh/known_hosts'
 
