--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,7 @@ deploy_staging:
   script:
     - echo "Deploy to staging server"
     - ssh ws_admin@178.62.11.121
+    - pwd
     - cd /srv/weshareashare
     - sudo git pull origin development
     - cd server
