--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,17 +63,14 @@ deploy_staging:
     - server
   script:
     - echo "Deploy to staging server"
-    - ssh ws_admin@178.62.11.121
-    - pwd
-    - ls
-    - cd /srv/weshareashare
-    - sudo git fetch
-    - cd server
-    - sudo rm -rf node_modules/
-    - sudo npm install bcrypt
-    - sudo npm install
-    - cd ../desktop
-    - sudo npm install
+    - ssh ws_admin@178.62.11.121 "cd /srv/weshareashare"
+    - ssh ws_admin@178.62.11.121 "sudo git fetch"
+    - ssh ws_admin@178.62.11.121 "cd server"
+    - ssh ws_admin@178.62.11.121 "sudo rm -rf node_modules/""
+    - ssh ws_admin@178.62.11.121 "sudo npm install bcrypt"
+    - ssh ws_admin@178.62.11.121 "sudo npm install"
+    - ssh ws_admin@178.62.11.121 "cd ../desktop"
+    - ssh ws_admin@178.62.11.121 "sudo npm install"
     - echo "Deployed to staging server"
   environment:
     name: staging
