trying to save form data with redux

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -2,6 +2,10 @@
   "name": "WeShareAShare",
   "displayName": "WeShareAShare",
   "expo": {
-    "sdkVersion": "21.0.0"
+    "sdkVersion": "21.0.0",
+    "orientation": "portrait",
+    "android": {
+        "package": "com.companyoffukunaga.william"
+    }
   }
 }
