--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,7 +8,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "^7.5.0",
     "jest-expo": "^21.0.2",
     "react-native-scripts": "1.5.0",
     "react-test-renderer": "16.0.0-alpha.12"
@@ -37,8 +37,8 @@
     "native-base": "^2.3.3",
     "node-fetch": "^1.7.3",
     "ramda": "^0.25.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.4",
+    "react": "^16.1.1",
+    "react-native": "^0.50.3",
     "react-native-button-component": "^0.1.25",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-drawer": "^2.5.0",
@@ -46,8 +46,8 @@
     "react-native-gifted-chat": "^0.2.9",
     "react-native-nav": "^2.0.2",
     "react-native-progress": "^3.4.0",
-    "react-native-vector-icons": "^4.4.2",
     "react-native-root-toast": "^2.2.0",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.19",
     "react-redux": "^5.0.6",
     "redux-persist": "^4.10.1",
