--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,7 @@
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.5.0",
     "jest-expo": "^21.0.2",
     "react-native-scripts": "1.5.0",
@@ -37,8 +37,8 @@
     "native-base": "^2.3.3",
     "node-fetch": "^1.7.3",
     "ramda": "^0.25.0",
-    "react": "^16.1.1",
-    "react-native": "^0.50.3",
+    "react": "16.0.0-alpha.12",
+    "react-native": "^0.48.4",
     "react-native-button-component": "^0.1.25",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-drawer": "^2.5.0",
