--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "2.0.1",
     "bcrypt": "1.0.3",
+    "encoding": "^0.1.12",
     "fill-pdf": "^1.1.0",
     "grunt": "1.0.1",
     "lodash": "3.10.1",
