--- a/mobile/package.json
+++ b/mobile/package.json
@@ -36,6 +36,7 @@
     "fetchival": "^0.3.2",
     "native-base": "^2.3.3",
     "node-fetch": "^1.7.3",
+    "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
