--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "jest-expo": "^21.0.2",
+    "native-base": "^2.3.3",
     "react-native-scripts": "1.5.0",
     "react-test-renderer": "16.0.0-alpha.12",
     "tcomb-form-native": "^0.6.10"
