--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,6 +37,7 @@
     "native-base": "^2.3.3",
     "node-fetch": "^1.7.3",
     "prop-types": "^15.6.0",
+    "radio-button-react-native": "^1.1.6",
     "ramda": "^0.25.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
