--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,8 @@ build:
     - npm install
     - export NODE_ENV=production
     - echo "Finishing building the app"
+  only:
+    - development
 
 deploy_staging:
   stage: deploy_staging
