--- a/mobile/package.json
+++ b/mobile/package.json
@@ -51,6 +51,7 @@
     "react-native-nav": "^2.0.2",
     "react-native-progress": "^3.4.0",
     "react-native-root-toast": "^2.2.0",
+    "react-native-step-indicator": "0.0.7",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
