--- a/desktop/package.json
+++ b/desktop/package.json
@@ -57,6 +57,7 @@
     "vue-bulma-tabs": "^1.1.2",
     "vue-bulma-tooltip": "^1.0.3",
     "vue-cleave": "1.1.1",
+    "vue-good-table": "^1.16.0",
     "vue-nprogress": "0.1.5",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1",
@@ -69,8 +70,10 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.0",
     "babel-plugin-transform-export-extensions": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-2": "^6.17.0",
+    "babel-preset-stage-2": "^6.24.1",
     "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.27.1",
