--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "eslint": "^4.11.0",
+    "babel-eslint": "^8.0.3",
+    "eslint": "^4.12.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "^7.5.1",
     "jest-expo": "^21.0.2",
     "react-native-scripts": "1.5.0",
     "react-test-renderer": "16.0.0-alpha.12"
@@ -30,8 +30,9 @@
     ]
   },
   "dependencies": {
-    "apisauce": "^0.14.1",
+    "apisauce": "^0.14.2",
     "buffer": "^5.0.8",
+    "ex-react-native-i18n": "0.0.3",
     "expo": "^21.0.0",
     "fetchival": "^0.3.2",
     "native-base": "^2.3.3",
