--- a/mobile/package.json
+++ b/mobile/package.json
@@ -35,6 +35,7 @@
     "ex-react-native-i18n": "0.0.3",
     "expo": "^21.0.0",
     "fetchival": "^0.3.2",
+    "lodash": "^4.17.4",
     "native-base": "^2.3.3",
     "node-fetch": "^1.7.3",
     "prop-types": "^15.6.0",
@@ -47,12 +48,14 @@
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-drawer": "^2.5.0",
     "react-native-elements": "^0.17.0",
+    "react-native-gesture-handler": "^1.0.0-alpha.35",
     "react-native-gifted-chat": "^0.2.9",
     "react-native-keyboard-aware-scroll-view": "^0.4.1",
     "react-native-nav": "^2.0.2",
     "react-native-progress": "^3.4.0",
     "react-native-root-toast": "^2.2.0",
     "react-native-step-indicator": "0.0.7",
+    "react-native-tab-view": "0.0.70",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
