--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,9 +9,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "jest-expo": "^21.0.2",
-    "react-native-scripts": "1.5.0",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-native-scripts": "1.8.1",
+    "jest-expo": "23.0.0",
+    "react-test-renderer": "16.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -33,7 +33,9 @@
     "apisauce": "^0.14.2",
     "buffer": "^5.0.8",
     "ex-react-native-i18n": "0.0.3",
-    "expo": "^21.0.0",
+    "expo": "^23.0.4",
+    "react": "16.0.0",
+    "react-native": "0.50.3",
     "fetchival": "^0.3.2",
     "lodash": "^4.17.4",
     "native-base": "^2.3.3",
@@ -41,8 +43,6 @@
     "prop-types": "^15.6.0",
     "radio-button-react-native": "^1.1.6",
     "ramda": "^0.25.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.4",
     "react-native-animatable": "^1.2.4",
     "react-native-button-component": "^0.1.25",
     "react-native-camera-roll-picker": "^1.2.3",
