--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "2.0.1",
-    "bcrypt": "1.0.3",
+    "bcrypt": "^1.0.3",
     "email-templates": "^3.1.6",
     "express-validator": "^4.3.0",
     "grunt": "1.0.1",
