--- a/mobile/package.json
+++ b/mobile/package.json
@@ -50,6 +50,7 @@
     "react-native-elements": "^0.17.0",
     "react-native-gesture-handler": "^1.0.0-alpha.35",
     "react-native-gifted-chat": "^0.2.9",
+    "react-native-htmlview": "^0.12.1",
     "react-native-keyboard-aware-scroll-view": "^0.4.1",
     "react-native-nav": "^2.0.2",
     "react-native-pathjs-charts": "0.0.33",
