--- a/desktop/package.json
+++ b/desktop/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.15.3",
     "bulma": "^0.3.2",
     "font-awesome": "4.7.0",
+    "js-cookie": "^2.2.0",
     "mdi": "^1.8.36",
     "vue": "^2.2.2",
     "vue-axios": "^2.0.1",
@@ -61,6 +62,7 @@
     "vue-nprogress": "0.1.5",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1",
+    "vuex-persistedstate": "^2.4.2",
     "vuex-router-sync": "^4.1.2",
     "wysiwyg.css": "0.0.2"
   },
