--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,12 @@
   "description": "We Share a Share",
   "keywords": [],
   "dependencies": {
-    "async": "2.0.1",
+    "async": "^2.0.1",
     "bcrypt": "^1.0.3",
-    "email-templates": "^3.1.6",
+    "email-templates": "^3.1.8",
     "express-validator": "^4.3.0",
     "grunt": "1.0.1",
-    "lodash": "3.10.1",
+    "lodash": "^3.10.1",
     "moment": "^2.19.1",
     "nodemailer": "^4.3.1",
     "passport": "^0.4.0",
@@ -18,7 +18,7 @@
     "passport-http-bearer": "^1.0.1",
     "pug": "^2.0.0-rc.4",
     "rand-token": "^0.3.0",
-    "sails": "^1.0.0-37",
+    "sails": "^1.0.0-42",
     "sails-hook-orm": "^2.0.0-16",
     "sails-hook-sockets": "^0.13.13",
     "sails-postgresql": "^1.0.0-11"
