--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ test_mobile:
   script:
     - echo "**Running Mobile tests**"
     - cd mobile
+    - apt-get install git-all
     - npm install
     - npm test
     - echo "**Terminating Mobile tests**"
