--- a/mobile/.eslintrc
+++ b/mobile/.eslintrc
@@ -17,6 +17,7 @@
       }
     ],
     "import/prefer-default-export": 0,
+    "import/no-unresolved": 0,
     "react/forbid-prop-types": 0,
     "arrow-parens": [
       1,
