--- a/mobile/app.json
+++ b/mobile/app.json
@@ -6,7 +6,7 @@
     "sdkVersion": "23.0.0",
     "orientation": "portrait",
     "android": {
-        "package": "william.company",
+        "package": "william.company"
     }
   }
 }
