--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,11 +2,16 @@ FROM node:8.6.0-alpine
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
+ADD package.json /usr/src/app
 
 RUN apk --no-cache add --virtual native-deps \
   git g++ gcc libgcc libstdc++ linux-headers make python && \
-  npm install -g nodemon && \
-  npm rebuild bcrypt --build-from-source
+  npm install node-gyp -g &&\
+  npm install -g nodemon &&\
+  npm install &&\
+  npm rebuild bcrypt --build-from-source && \
+  npm cache clean --force &&\
+  apk del native-deps
 
 RUN apk update && apk upgrade \
       && apk add pdftk
